update distance between orari

--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -88,13 +88,13 @@
                 <label>A che Ora*
                 </label>
                 <!-- Questi bottoni devono essere grandi uguali e distanziati meglio -->
-                <ul class="small-block-grid-2  extra-space-hamburger button-no-margin">
-                    <li><a href="#" class="small button">19.00-21.00</a></li>
-                    <li><a href="#" class="small button">19.30-21.30</a></li>
-                    <li><a href="#" class="small button disabled">20.00-22.00</a></li>
-                    <li><a href="#" class="small button">20.30-22.30</a></li>
-                    <li><a href="#" class="small button disabled">21.00-23.00</a></li>
-                    <li><a href="#" class="small button">21.30-23.00</a></li>
+                <ul class="small-block-grid-2  extra-space-image-tab-home">
+                    <li ><a href="#" class="small button">19.00-21.00</a></li>
+                    <li ><a href="#" class="small button">19.30-21.30</a></li>
+                    <li ><a href="#" class="small button disabled">20.00-22.00</a></li>
+                    <li ><a href="#" class="small button">20.30-22.30</a></li>
+                    <li ><a href="#" class="small button disabled">21.00-23.00</a></li>
+                    <li ><a href="#" class="small button">21.30-23.00</a></li>
                 </ul>
             </div>
             <span class="extra-space"><hr></span>
