--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -73,7 +73,7 @@
                 <h2> </h2>
             </div>
         </div>
-        <div class="row data-equalize">
+        <div class="row">
             <div class="small-6 medium-5 columns">
                 <label>Quante persone*
                     <input type="text" pattern="\d*" name="FNAME" class="required" id="mce-FNAME" placeholder=""/>
