--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Contatti</title>
-    <meta name="description" content="Una filosofia semplice: siamo specialisti in Hamburger Goduriosi e Birre artigianali, ma quelle buone, in un locale bellissimo"/>
+    <title>Beerstrot | Prenota</title>
+    <meta name="description" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2021"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="https://www.beerstrot.it/contatti/"/>
+    <meta property="og:url" content="https://www.beerstrot.it/prenota/"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Specialisti in Hamburger Goduriosi"/>
-    <meta property="og:description" content="Una filosofia semplice: siamo specialisti in Hamburger Goduriosi e Birre artigianali, ma quelle buone, in un locale bellissimo"/>
+    <meta property="og:title" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
+    <meta property="og:description" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="https://www.beerstrot.it/contatti/"/>
+    <link rel="canonical" href="https://www.beerstrot.it/prenota/"/>
     <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
