--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -7,7 +7,7 @@
     <title>Beerstrot | Prenota</title>
     <meta name="description" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2021"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2022"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="https://www.beerstrot.it/prenota/"/>
     <meta property="og:type" content="website"/>
@@ -155,7 +155,7 @@
             <div class="medium-12 large-12 columns">
                 <a role="button" href="#" class="button small right extra-space-from-tabs">Prenota</a>
             </div>
-            <div class="medium-12 large-12 columns">
+            <div class="medium-12 large-12 columns extra-space">
                 <p><small>* Campi obbligatori</small></p>
             </div>
         </div>
