--- a/asporto/index.html
+++ b/asporto/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
-    <title>Beerstrot | Menù | Asporto e Consegne</title>
+    <title>Beerstrot | Menù | Asporto</title>
     <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo."/>
 
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2021"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2022"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Ca' Vecchia Beerstrot Asporto e Consegne"/>
+    <meta name="twitter:title" content="Ca' Vecchia Beerstrot Asporto"/>
     <meta name="twitter:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo."/>
     <meta name="twitter:image" content="https://www.beerstrot.it/asset/img/large/asporto-background.jpg"/>
     <meta name="twitter:url" content="https://www.beerstrot.it/asporto/"/>
@@ -57,19 +57,17 @@
 			</li>
         </ul>
         <section class="top-bar-section">
-            <ul class="right">
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/social/">Social</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/blog/">Blog</a></li>
-            </ul>
-        </section>
+			<ul class="right">
+				<li class="divider"></li>
+				<li><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+				<li class="divider"></li>
+				<li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
+				<li class="divider"></li>
+				<li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
+				<li class="divider"></li>
+				<li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
+			</ul>
+		</section>
     </nav>
 <!-- fine navbar con hamburger -->
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
@@ -97,13 +95,11 @@
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <br>
-                <span class="hide-for-small"><a role="button" href="https://webview.passbot.it?venue=Beerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
-                <span class="show-for-small"><a role="button" href="https://webview.passbot.it?venue=Beerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
+                <span class=""><a role="button" href="tel:+390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
             </div>
         </div>
-        <div class="row">
-            <div class="medium-12 large-12 columns">
+        <div class="row extra-space-hamburger">
+            <div class="medium-12 large-12 columns extra-space">
                 <hr>
             </div>
         </div>
@@ -374,24 +370,22 @@
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <br>
-                <span class="hide-for-small"><a role="button" href="https://webview.passbot.it?venue=Beerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
-                <span class="show-for-small"><a role="button" href="https://webview.passbot.it?venue=Beerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
+                <span class=""><a role="button" href="tel:+390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
             </div>
         </div>
 <!-- call to action fine -->
     </div>
 <!-- tab fine -->
 <!-- inizio footer -->
-    <footer class="panel-footer">
+    <footer class="panel-footer extra-space-footer">
         <div class="row">
 			<div class="large-12 columns">
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
 		  			<li>
-						<h4 class="subheader">Prenota</h4>
-						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
-					</li>
+                        <h4 class="subheader">Contatti</h4>
+                        <p><a href="https://www.beerstrot.it/prenota/" class=""><span>Riserva un Tavolo</span></a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                    </li>
 		  			<!-- <li>
                        	<h4 class="subheader">Orari</h4>
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
@@ -448,17 +442,16 @@
 <!-- fine footer -->
 <!-- inizio navbar footer -->
     <div class="row footer">
-        <div class="small-12 medium-12 large-12 columns">
-            <p class="links">
-                <a href="https://www.beerstrot.it">Home</a>
-                <a href="https://www.beerstrot.it/menu/">Menù</a>
-                <a href="https://www.beerstrot.it/asporto/">Asporto</a>
-                <a href="https://www.beerstrot.it/social/">Social</a>
-                <a href="https://www.beerstrot.it/contatti/">Contatti</a>
-                <a href="https://www.beerstrot.it/blog/">Blog</a>
-            </p>
-        </div>
-    </div>
+		<div class="small-12 medium-12 large-12 columns">
+			<p class="links">
+				<a href="https://www.beerstrot.it">Home</a>
+				<a href="https://www.beerstrot.it/prenota/">Prenota</a>
+				<a href="https://www.beerstrot.it/menu/">Menù</a>
+				<a href="https://www.beerstrot.it/asporto/">Asporto</a>
+				<a href="https://www.beerstrot.it/contatti/">Contatti</a>
+			</p>
+		</div>
+	</div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
