--- a/asporto/index.html
+++ b/asporto/index.html
@@ -95,7 +95,7 @@
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <br>
-                <span class=""><a role="button" href="tel:+390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class=""><a role="button" href="tel:+390718853384" class="button right extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
             </div>
         </div>
         <div class="row extra-space-hamburger">
@@ -370,7 +370,7 @@
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <br>
-                <span class=""><a role="button" href="tel:+390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class=""><a role="button" href="tel:+390718853384" class="button right extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
             </div>
         </div>
 <!-- call to action fine -->
