--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -153,7 +153,7 @@
         </div>
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <a role="button" href="#" class="button small right extra-space-from-tabs">Prenota</a>
+                <a role="button" href="#" class="button right extra-space-from-tabs">Riserva il Tavolo</a>
             </div>
             <div class="medium-12 large-12 columns extra-space">
                 <p><small>* Campi obbligatori</small></p>
