update privacy chech

--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -148,7 +148,7 @@
         </div>
         <div class="row">
             <div class="small-6 medium-3 columns end">
-                <input id="checkbox1" type="checkbox"><label for="checkbox2">Accetto la privacy</label>
+                <input id="checkbox1" type="checkbox" checked><label for="checkbox2"> Accetto la<a href="#"> privacy</a> </label>
             </div>
         </div>
         <div class="row">
