--- a/asporto/index.html
+++ b/asporto/index.html
@@ -383,7 +383,7 @@
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
 		  			<li>
                         <h4 class="subheader">Contatti</h4>
-                        <p><a href="https://www.beerstrot.it/prenota/" class=""><span>Riserva un Tavolo</span></a></p>
+                        <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
                         <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
                     </li>
 		  			<!-- <li>
