--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -148,7 +148,7 @@
         </div>
         <div class="row">
             <div class="small-12 medium-6 columns end">
-                <input id="checkbox1" type="checkbox" checked><label for="checkbox2"> Accetto la<a href="#"> privacy</a> </label>
+                <input id="checkbox1" type="checkbox" checked><label for="checkbox2"> Accetto la<a href="#"> privacy</a></label>
             </div>
         </div>
         <div class="row">
@@ -168,7 +168,7 @@
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
 		  			<li>
 						<h4 class="subheader">Contatti</h4>
-						<p><a href="#" class=""><span>Riserva un Tavolo</span></a></p>
+						<p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
                         <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
                     </li>
 					</li>
