--- a/menu/index.html
+++ b/menu/index.html
@@ -632,7 +632,7 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Spritz <span class="price">5</span></h3>
-                            <p>Aperol, Campari</p>
+                            <p>Campari</p>
                         </li>
                         <li>
                             <h3>Gin Tonic Ginpilz <span class="price">8</span></h3>
