--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -79,9 +79,9 @@
                     <input type="text" pattern="\d*" name="FNAME" class="required" id="mce-FNAME" placeholder=""/>
                 </label>
             </div>
-            <div class="small-6 medium-5 columns end">
+            <div class="small-6 medium-3 columns end">
                 <label>Che data*
-                    <input type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="seleziona giorno" />
+                    <input tabindex="5" id="from" type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="seleziona giorno" />
                 </label>
             </div>
             <div class="small-12 medium-5 columns end">
@@ -242,5 +242,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="https://www.beerstrot.it/js/app.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
+    <script src="../js/aws-sdk.min.js"></script>
+    <script src="../js/prenota.min.js"></script>
 </body>
 </html>
