update text and space

--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="https://www.beerstrot.it/prenota/"/>
-    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -80,15 +80,15 @@
                 </label>
             </div>
             <div class="small-6 medium-3 columns end">
-                <label>Che data*
+                <label>Quale giorno*
                     <input tabindex="5" id="from" type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="seleziona giorno" />
                 </label>
             </div>
             <div class="small-12 medium-5 columns end">
-                <label>A che Ora*
+                <label>Quale turno*
                 </label>
                 <!-- Questi bottoni devono essere grandi uguali e distanziati meglio -->
-                <ul class="small-block-grid-2  extra-space-image-tab-home">
+                <ul class="small-block-grid-2  extra-space-turno">
                     <li ><a href="#" class="small button">19.00-21.00</a></li>
                     <li ><a href="#" class="small button">19.30-21.30</a></li>
                     <li ><a href="#" class="small button disabled">20.00-22.00</a></li>
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="small-12 medium-6 columns end">
                 <label>Note
-                    <textarea placeholder="allergie, intolleranze ..."></textarea>
+                    <textarea placeholder="allergie, intolleranze, accesso con sedia a rotelle, ..."></textarea>
                 </label>
             </div>
         </div>
