--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="small-12 medium-6 columns end">
                 <label>Note
-                    <textarea placeholder="allergie, intolleranze, accesso con sedia a rotelle, ..."></textarea>
+                    <textarea placeholder="intolleranze, accesso con sedia a rotelle, ..."></textarea>
                 </label>
             </div>
         </div>
