--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -77,7 +77,7 @@
             <div class="small-6 medium-3 columns">
                 <label>Quante persone*
                     <select name="MMERGE4" class="" id="mce-MMERGE4">
-                        <option value=""></option>
+                        <option value="">Seleziona un numero</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
