--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="https://www.beerstrot.it/prenota/"/>
-    <link rel="stylesheet" href="https://www.beerstrot.it//css/app.css"/>
+    <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
@@ -110,6 +110,7 @@
                     <li ><a href="#" class="small button disabled">21.00-23.00</a></li>
                     <li ><a href="#" class="small button">21.30-23.00</a></li>
                 </ul>
+                <p><small>Turno: orario d'arrivo-orario in cui bisogna lasciare il tavolo</small></p>
             </div>
             <span class="extra-space"><hr></span>
         </div>
