--- a/index1.html
+++ b/index1.html
@@ -143,7 +143,9 @@
 				<h2>Asporto</h2>
 				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</p>
-				<p>Per ordinare un asporta chiamaci al numero <a role="button" href="tel:+390718853384"> 071 8853384</a></p>
+				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
+				<!-- <p>Per ordinare un asporta chiamaci al numero <a role="button" href="tel:+390718853384"> 071 8853384</a></p> -->
 
 			</div>
 			<!-- <div class="medium-6 large-6 columns">
