--- a/asporto/index.html
+++ b/asporto/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
     <title>Beerstrot | Menù | Asporto</title>
     <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo."/>
-
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2022"/>
     <meta name="twitter:card" content="summary_large_image"/>
@@ -85,17 +84,12 @@
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 large-6 columns">
+            <div class="medium-12 large-12 columns">
                 <p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
                 <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
                 <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
-                <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
-            </div>
-        </div>
-        <div class="row">
-            <div class="medium-12 large-12 columns">
-                <br>
-                <span class=""><a role="button" href="tel:+390718853384" class="button right extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
             </div>
         </div>
         <div class="row extra-space-hamburger">
@@ -369,8 +363,8 @@
 <!-- call to action inizio -->
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <br>
-                <span class=""><a role="button" href="tel:+390718853384" class="button right extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
             </div>
         </div>
 <!-- call to action fine -->
