update to prenotazione

--- a/eventi/flora-e-fauna-concerto-live.html
+++ b/eventi/flora-e-fauna-concerto-live.html
@@ -44,15 +44,13 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
+                <li><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+                <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
                 <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/social/">Social</a></li>
-                <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-                <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -135,10 +133,10 @@
 			<div class="large-12 columns">
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
 		  			<li>
-						<h4 class="subheader">Prenota</h4>
-						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
-					</li>
+                        <h4 class="subheader">Contatti</h4>
+                        <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                    </li>
 		  			<li>
                         <h4 class="subheader">Orari</h4>
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
