--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -95,7 +95,7 @@
             </div>
             <div class="small-6 medium-4 columns end">
                 <label>Quale giorno*
-                    <input tabindex="5" id="from" type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="seleziona giorno" />
+                    <input tabindex="5" id="from" type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Seleziona Giorno" />
                 </label>
             </div>
             <div class="small-12 medium-6 columns end">
