--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -110,7 +110,7 @@
                     <li ><a href="#" class="small button disabled">21.00-23.00</a></li>
                     <li ><a href="#" class="small button">21.30-23.00</a></li>
                 </ul>
-                <p><small>Turno: orario d'arrivo-orario in cui bisogna lasciare il tavolo</small></p>
+                <p>Turno: orario d'arrivo-orario in cui bisogna lasciare il tavolo</p>
             </div>
             <span class="extra-space"><hr></span>
         </div>
