--- a/index1.html
+++ b/index1.html
@@ -43,18 +43,6 @@
 		src="https://www.facebook.com/tr?id=770709373057085&ev=PageView&noscript=1"/>
 	</noscript>
 <!-- End Facebook Pixel Code -->
-
-<!-- Alert popup -->
-
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script>
-    $("document").ready( function () {
-        alert("Oggi chiusi per pioggia");
-    });
-</script> -->
-
-<!-- End Alert popup -->
-
 </head>
 <body>
 <!-- navbar con hamburger -->
@@ -106,6 +94,7 @@
 					<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura.</p>
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<p>E' consentito fumare solo nell'area preposta lontano dai tavoli.</p>
+				<a role="button" href="https://m.me/cavecchiabeerstrot" class="button right">Riserva un Tavolo</a>
 			</div>
 		</div>
 	</div>
@@ -123,14 +112,6 @@
 			</div>
 		</div>
 		<div class="row">
-			<!-- <div class="medium-6 large-6 columns">
-				<h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
-				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
-				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
-				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
-				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-			</div>  -->
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
 				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
@@ -203,7 +184,6 @@
 			<div class="medium-6 medium-push-6 large-6 large-push-6 columns">
 				<div class="flex-video widescreen vimeo extra-space-video">
 					<a role="button" href="https://www.beerstrot.it/video/">
-						<!-- <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe> -->
 						<iframe width="1280" height="720" src="https://www.youtube.com/embed/jVDlGrvFMyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</a>
 				</div>
@@ -291,14 +271,5 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
 	<script src="https://www.beerstrot.it/js/app.min.js"></script>
-<!-- Alert popup -->
-
-	<!-- <script>
-		$(window).load(function() {
-      		alert("Oggi chiusi per pioggia.");
-		});
-	</script> -->
-
-<!-- End Alert popup -->
 </body>
 </html>
