--- a/index1.html
+++ b/index1.html
@@ -120,8 +120,8 @@
 				<a role="button" href="https://m.me/cavecchiabeerstrot" class="button right">Riserva un Tavolo</a>
 			</div>
 			<div class="medium-6 large-6 columns">
-				<span class="show-for-small extra-space"></span>
-				<h2>Asporto</h2>
+				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
+				<span class="hide-for-small"><h2>Asporto</h2></span>
 				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</p>
 				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
@@ -157,6 +157,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="panel-home-n">
 		<div class="row">
 			<div class="medium-6 large-6 columns">
