--- a/index1.html
+++ b/index1.html
@@ -117,7 +117,7 @@
 				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
 				<p>Riserva un tavolo direttamente online. <br>  <small>Nota bene: per gruppi di 13 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></p>
-				<a role="button" href="https://m.me/cavecchiabeerstrot" class="button right">Riserva un Tavolo</a>
+				<a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
