--- a/index1.html
+++ b/index1.html
@@ -94,7 +94,7 @@
 					<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura.</p>
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<p>E' consentito fumare solo nell'area preposta lontano dai tavoli.</p>
-				<a role="button" href="https://m.me/cavecchiabeerstrot" class="button right">Riserva un Tavolo</a>
+				<a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a>
 			</div>
 		</div>
 	</div>
