--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -74,7 +74,12 @@
             </div>
         </div>
         <div class="row">
-            <div class="small-6 medium-3 columns">
+            <div class="small-6 medium-4 columns">
+                <label>Quale giorno*
+                    <input tabindex="5" id="from" type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Seleziona Giorno" />
+                </label>
+            </div>
+            <div class="small-6 medium-3 columns end">
                 <label>Quante persone*
                     <select name="MMERGE4" class="" id="mce-MMERGE4">
                         <option value="">Seleziona Numero</option>
@@ -91,11 +96,6 @@
                         <option value="11">11</option>
                         <option value="12">12</option>
                     </select>
-                </label>
-            </div>
-            <div class="small-6 medium-4 columns end">
-                <label>Quale giorno*
-                    <input tabindex="5" id="from" type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Seleziona Giorno" />
                 </label>
             </div>
             <div class="small-12 medium-6 columns end">
@@ -122,8 +122,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="small-8 medium-3 columns end">
-                <label>Ho bisogno di seggioloni
+            <div class="small-9 medium-3 columns end">
+                <label>Devo aggiungere seggioloni
                     <select name="MMERGE4" class="" id="mce-MMERGE4">
                         <option value="0">No</option>
                         <option value="1">1</option>
