--- a/index.html
+++ b/index.html
@@ -146,9 +146,8 @@
 				<h2>Asporto</h2>
 				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</p>
-                <span class="hide-for-small extra-space"><a role="button" href="https://webview.passbot.it?venue=Beerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="https://webview.passbot.it?venue=Beerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
+				<span class="hide-for-small extra-spac"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                		<span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
 			<!-- <div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
