--- a/index1.html
+++ b/index1.html
@@ -94,7 +94,7 @@
 					<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura.</p>
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<p>E' consentito fumare solo nell'area preposta lontano dai tavoli.</p>
-				<a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a>
+				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
 			</div>
 		</div>
 	</div>
@@ -117,15 +117,15 @@
 				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
 				<p>Riserva un tavolo direttamente online. <br>  <small>Nota bene: per gruppi di 13 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></p>
-				<a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a>
+				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
 				<span class="hide-for-small"><h2>Asporto</h2></span>
 				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</p>
-				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
+				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Chiama</a></span>
 				<!-- <p>Per ordinare un asporta chiamaci al numero <a role="button" href="tel:+390718853384"> 071 8853384</a></p> -->
 
 			</div>
