--- a/index1.html
+++ b/index1.html
@@ -116,7 +116,7 @@
 				<h2>Ristorante</h2>
 				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
-				<p>Riserva un tavolo direttamente online. <br>  <small>Nota bene: per gruppi di 13 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></p>
+				<p>Riserva un tavolo direttamente online. <br>  <span class="subheader"><small>Nota bene: per gruppi di 13 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span></p>
 				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
 			</div>
 			<div class="medium-6 large-6 columns">
