--- a/prenota/index1_risposta.html
+++ b/prenota/index1_risposta.html
@@ -76,7 +76,7 @@
         <div class="row">
             <div class="small-12 medium-12 columns">
                 <ul class="no-bullet">
-                    <li><strong>Nome: </strong>re as</li>
+                    <li><strong>Nome: </strong>Andrea Tagliazucchi</li>
                     <li><strong>Telefono: </strong>3332221111</li>
                     <li><strong>Email: </strong>aldomontano@aldo.it</li>
                     <br>
