--- a/prenota/index1_risposta1.html
+++ b/prenota/index1_risposta1.html
@@ -79,7 +79,7 @@
                 <fieldset>
                      <legend>Dettagli della prenotazione</legend>
                         <ul class="no-bullet">
-                            <li><strong>Nome: </strong>re as</li>
+                            <li><strong>Nome: </strong>Andrea Tagliazucchi</li>
                             <li><strong>Telefono: </strong>3332221111</li>
                             <li><strong>Email: </strong>aldomontano@aldo.it</li>
                             <br>
