--- a/prenota/index1_risposta.html
+++ b/prenota/index1_risposta.html
@@ -63,7 +63,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Prenotazione confermata</h1>
+            <h1>Tavolo riservato. Grazie</h1>
             <br>
         </div>
     </header>
