--- a/prenota/index1_risposta.html
+++ b/prenota/index1_risposta.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Prenota</title>
-    <meta name="description" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
+    <title>Beerstrot | Prenotato</title>
+    <meta name="description" content="Tavolo riservato a Ca' Vecchia Beerstrot"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2022"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="https://www.beerstrot.it/prenota/"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
-    <meta property="og:description" content="Riserva un Tavolo a Ca' Vecchia Beerstrot"/>
+    <meta property="og:title" content="Tavolo riservato a Ca' Vecchia Beerstrot"/>
+    <meta property="og:description" content="Tavolo riservato a Ca' Vecchia Beerstrot"/>
     <link rel="icon" href="https://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="https://www.beerstrot.it/prenota/"/>
     <link rel="stylesheet" href="https://www.beerstrot.it/css/app.css"/>
