--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -134,8 +134,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="small-6 medium-3 columns end">
-                <input id="checkbox1" type="checkbox"><label for="checkbox1">Ho un Cane</label>
+            <div class="small-9 medium-3 columns end">
+                <input id="checkbox1" type="checkbox"><label for="checkbox1">Ho uno o più cani</label>
             </div>
             <span class=""><hr></span>
         </div>
