--- a/prenota/index1_risposta.html
+++ b/prenota/index1_risposta.html
@@ -75,24 +75,25 @@
         </div>
         <div class="row">
             <div class="small-12 medium-12 columns">
-
-                <fieldset>
-                     <legend>Dettagli della prenotazione</legend>
-                        <ul class="no-bullet">
-                            <li><strong>Nome: </strong>Andrea Tagliazucchi</li>
-                            <li><strong>Telefono: </strong>3332221111</li>
-                            <li><strong>Email: </strong>aldomontano@aldo.it</li>
-                            <br>
-                            <li><strong>Quale giorno: </strong>lunedì, 4 luglio 2022</li>
-                            <li><strong>Orario arrivo: </strong>19:00</li>
-                            <li><strong>Orario in cui lasciare il tavolo: </strong>21:00</li>
-                            <li><strong>Numero persone: </strong>10</li>
-                            <br>
-                            <li><strong>Note: </strong>sono vegano e ho bisogno di portare cibo da casa</li>
-                            <li><strong>Seggioloni aggiunti: </strong>2</li>
-                            <li><strong>Ho un cane o più: </strong>Si</li>
-                        </ul>
-                </fieldset>
+                <form>
+                    <fieldset>
+                        <legend>Dettagli della prenotazione</legend>
+                            <ul class="no-bullet">
+                                <li><strong>Nome: </strong>Andrea Tagliazucchi</li>
+                                <li><strong>Telefono: </strong>3332221111</li>
+                                <li><strong>Email: </strong>aldomontano@aldo.it</li>
+                                <br>
+                                <li><strong>Quale giorno: </strong>lunedì, 4 luglio 2022</li>
+                                <li><strong>Orario arrivo: </strong>19:00</li>
+                                <li><strong>Orario in cui lasciare il tavolo: </strong>21:00</li>
+                                <li><strong>Numero persone: </strong>10</li>
+                                <br>
+                                <li><strong>Note: </strong>sono vegano e ho bisogno di portare cibo da casa</li>
+                                <li><strong>Seggioloni aggiunti: </strong>2</li>
+                                <li><strong>Ho un cane o più: </strong>Si</li>
+                            </ul>
+                    </fieldset>
+                </form>
             </div>
         </div>
         <div class="row extra-space">
