--- a/prenota/index1_risposta.html
+++ b/prenota/index1_risposta.html
@@ -90,7 +90,7 @@
                                 <br>
                                 <li><strong>Note: </strong>sono vegano e ho bisogno di portare cibo da casa</li>
                                 <li><strong>Seggioloni aggiunti: </strong>2</li>
-                                <li><strong>Ho un cane o più: </strong>Si</li>
+                                <li><strong>Ho uno o più cani: </strong>Si</li>
                             </ul>
                     </fieldset>
                 </form>
