--- a/prenota/index2.html
+++ b/prenota/index2.html
@@ -149,8 +149,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="small-8 medium-3 columns end">
-                <label>Ho bisogno di seggioloni
+            <div class="small-9 medium-3 columns end">
+                <label>Devo aggiungere seggioloni
                     <select name="MMERGE4" class="" id="seggiolini">
                         <option value="0">No</option>
                         <option value="1">1</option>
@@ -161,8 +161,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="small-6 medium-3 columns end">
-                <input id="cani" type="checkbox"><label for="checkbox1">Ho un Cane</label>
+            <div class="small-9 medium-3 columns end">
+                <input id="cani" type="checkbox"><label for="checkbox1">Ho uno o più cani</label>
             </div>
             <span class=""><hr></span>
         </div>
