update to add tables

--- a/prenota/index1.html
+++ b/prenota/index1.html
@@ -259,7 +259,7 @@
     <script src="https://www.beerstrot.it/js/app.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
-    <script src="../js/aws-sdk.min.js"></script>
-    <script src="../js/prenota.min.js"></script>
+    <script src="https://www.beerstrot.it/js/aws-sdk.min.js"></script>
+    <script src="https://www.beerstrot.it/js/prenota.min.js"></script>
 </body>
 </html>
