--- a/prenota/dashboard.html
+++ b/prenota/dashboard.html
@@ -48,13 +48,13 @@
         </div>
     </header>
     <div class="row">
-            <div class="small-12 medium-12 columns">
+            <div class="small-6 medium-3 columns">
                 <label>Quale giorno*
                     <input tabindex="5" id="from" type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Seleziona Giorno" />
                 </label>
             </div>
         </div>
-        <div class="row">
+        <div class="row class=extra-space>
             <div class="small-12 medium-12 columns">
                 <table>
                     <thead>
