--- a/prenota/dashboard.html
+++ b/prenota/dashboard.html
@@ -54,7 +54,7 @@
                 </label>
             </div>
         </div>
-        <div class="row class=extra-space>
+        <div class="row extra-space">
             <div class="small-12 medium-12 columns">
                 <table>
                     <thead>
@@ -110,7 +110,6 @@
             </div>
         </div>
     </div>
-
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="https://www.beerstrot.it/js/app.min.js"></script>
