--- a/prenota/dashboard.html
+++ b/prenota/dashboard.html
@@ -61,11 +61,12 @@
                         <tr>
                           <th>Nome</th>
                           <th>Telefono</th>
-                          <th width="">Email</th>
+                          <th>Email</th>
                           <th>Orario</th>
                           <th>Numero persone</th>
                           <th>Seggioloni</th>
                           <th>Cani</th>
+                          <th width="100">Note</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -77,6 +78,7 @@
                             <td>12</td>
                             <td>2</td>
                             <td>Si</td>
+                            <td>Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Rerum adipisci sequi eos explicabo natus pariatur ad ex, accusamus officiis minus cupiditate amet quod inventore, repellendus voluptate enim esse in aliquid.</td>
                         </tr>
                         <tr>
                             <td>Sandronello Lungocognome</td>
@@ -86,6 +88,7 @@
                             <td>7</td>
                             <td>3</td>
                             <td>Si</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>Thierry Henry</td>
@@ -95,6 +98,7 @@
                             <td>4</td>
                             <td>1</td>
                             <td>No</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td><strong>-</strong></td>
@@ -103,6 +107,7 @@
                             <td><strong>-</strong></td>
                             <td><strong>23</strong></td>
                             <td><strong>6</strong></td>
+                            <td><strong>-</strong></td>
                             <td><strong>-</strong></td>
                         </tr>
                     </tbody>
