--- a/prenota/dashboard.html
+++ b/prenota/dashboard.html
@@ -88,7 +88,7 @@
                             <td>7</td>
                             <td>3</td>
                             <td>Si</td>
-                            <td></td>
+                            <td>Ciao compratemi arrapao</td>
                         </tr>
                         <tr>
                             <td>Thierry Henry</td>
@@ -98,7 +98,7 @@
                             <td>4</td>
                             <td>1</td>
                             <td>No</td>
-                            <td></td>
+                            <td>ciao il mio nome è ascella pezzata</td>
                         </tr>
                         <tr>
                             <td><strong>-</strong></td>
