--- a/prenota/dashboard.html
+++ b/prenota/dashboard.html
@@ -66,7 +66,7 @@
                           <th>Numero persone</th>
                           <th>Seggioloni</th>
                           <th>Cani</th>
-                          <th width="100">Note</th>
+                          <th width="400">Note</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -83,7 +83,7 @@
                         <tr>
                             <td>Sandronello Lungocognome</td>
                             <td>3331112222</td>
-                            <td>Sandronello.ungocognome@sandronello.info</td>
+                            <td>Sandronello.ungocognome@sandronello.it</td>
                             <td>19:30-21:30</td>
                             <td>7</td>
                             <td>3</td>
