--- a/prenota/dashboard.html
+++ b/prenota/dashboard.html
@@ -47,9 +47,10 @@
             <br>
         </div>
     </header>
-    <div class="row">
+    <div>
+        <div class="row">
             <div class="small-6 medium-3 columns">
-                <label>Quale giorno*
+                <label>Quale giorno
                     <input tabindex="5" id="from" type="text" name="LNAME" class="required" id="mce-LNAME" placeholder="Seleziona Giorno" />
                 </label>
             </div>
@@ -78,12 +79,12 @@
                             <td>12</td>
                             <td>2</td>
                             <td>Si</td>
-                            <td>Lorem ipsum, dolor sit, amet consectetur adipisicing elit. Rerum adipisci sequi eos explicabo natus pariatur ad ex, accusamus officiis minus cupiditate amet quod inventore, repellendus voluptate enim esse in aliquid.</td>
+                            <td>Lorem ipsum, dolor sit, amet consectetur adipisicing elit.  sequi eos explicabo natus pariatur ad ex, accusamus officiis minus cupiditate amet quod inventore, repellendus voluptate enim esse in aliquid più.</td>
                         </tr>
                         <tr>
                             <td>Sandronello Lungocognome</td>
                             <td>3331112222</td>
-                            <td>Sandronello.ungocognome@sandronello.it</td>
+                            <td>Sandronello.cognome@sandronello.it</td>
                             <td>19:30-21:30</td>
                             <td>7</td>
                             <td>3</td>
@@ -93,7 +94,7 @@
                         <tr>
                             <td>Thierry Henry</td>
                             <td>3331112222</td>
-                            <td>henry.com</td>
+                            <td>henry@henry.com</td>
                             <td>19:30-21:30</td>
                             <td>4</td>
                             <td>1</td>
