--- a/prenota/dashboard.html
+++ b/prenota/dashboard.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="row extra-space">
-            <div class="small-12 medium-12 columns">
+            <div class="small-12 medium-12 columns" style="overflow-x:auto;">
                 <table>
                     <thead>
                         <tr>
