add responsive table

--- a/prenota/dashboard_responsive.html
+++ b/prenota/dashboard_responsive.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--[if IE 9]><html class="lt-ie10" lang="it" > <![endif]-->
-<html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
+<html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)" id="dashboard">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
@@ -56,67 +56,67 @@
             </div>
         </div>
         <div class="row extra-space">
-            <div class="small-12 medium-12 columns" style="overflow-x:auto;">
-                <table>
-                    <thead>
-                        <tr>
-                          <th>Nome</th>
-                          <th>Telefono</th>
-                          <th>Email</th>
-                          <th>Orario</th>
-                          <th>Numero persone</th>
-                          <th>Tavolo</th>
-                          <th>Seggioloni</th>
-                          <th>Cani</th>
-                          <th width="400">Note</th>
+            <div class="small-12 medium-12 columns">
+                <table role="table">
+                    <thead role="rowgroup">
+                        <tr role="row">
+                            <th role="columnheader">Nome</th>
+                            <th role="columnheader">Telefono</th>
+                            <th role="columnheader">Email</th>
+                            <th role="columnheader">Orario</th>
+                            <th role="columnheader">Numero persone</th>
+                            <th role="columnheader">Tavolo</th>
+                            <th role="columnheader">Seggioloni</th>
+                            <th role="columnheader">Cani</th>
+                            <th role="columnheader">Note</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>Antonino Canavacciuloooo</td>
-                            <td>3331112222</td>
-                            <td>andreatagliazucchi@gmail.com</td>
-                            <td>19:30-21:30</td>
-                            <td>12</td>
-                            <td>Aia 41</td>
-                            <td>2</td>
-                            <td>Si</td>
-                            <td>Lorem ipsum, dolor sit, amet consectetur adipisicing elit.  sequi eos explicabo natus pariatur ad ex, accusamus officiis minus cupiditate amet quod inventore, repellendus voluptate enim esse in aliquid più.</td>
+                      <tbody role="rowgroup">
+                        <tr role="row">
+                          <td role="cell">Antonino Canavacciuloooo</td>
+                          <td role="cell">3331112222</td>
+                          <td role="cell">andreatagliazucchi@gmail.com</td>
+                          <td role="cell">19:30-21:30</td>
+                          <td role="cell">12</td>
+                          <td role="cell">Aia 41</td>
+                          <td role="cell">2</td>
+                          <td role="cell">Si</td>
+                          <td role="cell">Lorem ipsum, dolor sit, amet consectetur adipisicing elit.  sequi eos explicabo natus pariatur ad ex, accusamus officiis minus cupiditate amet quod inventore, repellendus voluptate enim esse in aliquid più.</td>
                         </tr>
-                        <tr>
-                            <td>Sandronello Lungocognome</td>
-                            <td>3331112222</td>
-                            <td>Sandronello.cognome@sandronello.it</td>
-                            <td>19:30-21:30</td>
-                            <td>7</td>
-                            <td>Aia 52</td>
-                            <td>3</td>
-                            <td>Si</td>
-                            <td>Ciao compratemi arrapao</td>
+                        <tr role="row">
+                            <td role="cell">Sandronello Lungocognome</td>
+                            <td role="cell">3331112222</td>
+                            <td role="cell">Sandronello.cognome@sandronello.it</td>
+                            <td role="cell">19:30-21:30</td>
+                            <td role="cell">7</td>
+                            <td role="cell">Aia 52</td>
+                            <td role="cell">3</td>
+                            <td role="cell">Si</td>
+                            <td role="cell">Ciao compratemi arrapao</td>
                         </tr>
-                        <tr>
-                            <td>Thierry Henry</td>
-                            <td>3331112222</td>
-                            <td>henry@henry.com</td>
-                            <td>19:30-21:30</td>
-                            <td>4</td>
-                            <td>Aia 53</td>
-                            <td>1</td>
-                            <td>No</td>
+                        <tr role="row">
+                            <td role="cell">Thierry Henry</td>
+                            <td role="cell">3331112222</td>
+                            <td role="cell">henry@henry.com</td>
+                            <td role="cell">19:30-21:30</td>
+                            <td role="cell">4</td>
+                            <td role="cell">Aia 53</td>
+                            <td role="cell">1</td>
+                            <td role="cell">No</td>
                             <td>ciao il mio nome è ascella pezzata</td>
                         </tr>
-                        <tr>
+                        <tr role="row">
+                            <td role="cell"><strong>-</strong></td>
                             <td><strong>-</strong></td>
+                            <td role="cell"><strong>-</strong></td>
                             <td><strong>-</strong></td>
-                            <td><strong>-</strong></td>
-                            <td><strong>-</strong></td>
-                            <td><strong>23</strong></td>
-                            <td><strong>6</strong></td>
-                            <td><strong>-</strong></td>
-                            <td><strong>-</strong></td>
+                            <td role="cell"><strong>23</strong></td>
+                            <td role="cell"><strong>6</strong></td>
+                            <td role="cell"><strong>-</strong></td>
+                            <td role="cell"><strong>-</strong></td>
                         </tr>
-                    </tbody>
-                </table>
+                      </tbody>
+                    </table>
             </div>
         </div>
     </div>
