spostato pulsante e flaggato privacy

--- a/prenota/index2.html
+++ b/prenota/index2.html
@@ -190,12 +190,12 @@
         </div>
         <div class="row">
             <div class="small-12 medium-6 columns end">
-                <input id="privacy" type="checkbox"><label for="checkbox2"> Accetto la<a href="#"> privacy</a></label>
+                <input id="privacy" type="checkbox" checked><label for="checkbox2"> Accetto la<a href="#"> privacy</a></label>
             </div>
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a id="prenota" role="button" class="button left extra-space-from-tabs">Riserva il Tavolo</a>
+                <a id="prenota" role="button" class="button right extra-space-from-tabs">Riserva il Tavolo</a>
             </div>
             <div class="medium-12 large-12 columns extra-space">
                 <p><small>* Campi obbligatori</small></p>
