--- a/prenota/dashboard.html
+++ b/prenota/dashboard.html
@@ -114,6 +114,7 @@
                             <td><strong>6</strong></td>
                             <td><strong>-</strong></td>
                             <td><strong>-</strong></td>
+                            <td><strong>-</strong></td>
                         </tr>
                     </tbody>
                 </table>
